--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "SecretKey": "89FB1C28F57589ADB8EED3B13F2C6MKIMNGANNGUYENTUANKIET",
+    "Issuer": "http://localhost:44333/",
+    "Audience": "account"
+  }
 }
