feat: add appsetting for production and redesgin apiroute in UserController

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "JWT": {
     "SecretKey": "89FB1C28F57589ADB8EED3B13F2C6MKIMNGANNGUYENTUANKIET",
-    "Issuer": "http://localhost:44333/",
+    "Issuer": "",
     "Audience": "account"
   }
 }
